# pyhrs

./: .gitignore  .travis.yml  README.md  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst  rtd-pip-requirements
docs/pyhrs/: extractspectra.rst  findingorders.rst  hrsorder.rst  hrsprocess.rst  index.rst  pyhrs_api.rst  wavelengthcalibration.rst
docs/themes/bootstrap-astropy/: layout.html  theme.conf
pyhrs/: __init__.py  calibrationframes.py  extraction.py  hrsmodel.py  hrsorder.py  hrsprocess.py  hrstools.py  spectrum1d.py  velocitycorrection.py  version.py  wavelengthsolution.py
pyhrs/tests/: test_hrsmodel.py  test_hrsorder.py  test_hrsprocess.py  test_hrstools.py
scripts/: arc_solution.py  autofit.py  extract.py  identify.py  make_calibrationframes.py  normalize_spec.py  plot_spectra_order.py  process.py  re-identify.py  read_midas.py  spec_combine.py  telluric_fitter.py  tellurics.fits  wavelength_2Dfit.py
