[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pyhrs
description = Reducing SALT HRS data
long_description = Software for reducing observations from the SALT High Resolution Spectrograph
author = Steve Crawford
author_email = crawford@saao.ac.za
license = BSD
url = http://pysalt.salt.ac.za/
edit_on_github = False
github_project = saltastro/pyhrs
