[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pyhrs
description = HRS reduction software 
long_description = This is a package for reducing data from the High Resolution Spectrograph on SALT
author = Steve Crawford
author_email = crawford@saao.ac.za
license = BSD
url = http://pysalt.salt.ac.za/
edit_on_github = False
github_project = saltastro/pyhrs
